chatbot-mental-health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: chatbot-mental-health-app
 namespace: remmanuel
spec:
 ingressClassName: traefik
 rules:
   - host: pakcarik.petra.ac.id
     http:
       paths:
       - backend:
           service:
             name: chatbot-mental-health-service
             port:
               number: 80
         path: /chatbot-mental-health
         pathType: Prefix
